larger space for group names (so it doesnt overlap), fixed rehabilitant list having a gap at the bottom when there is no groupname above it (100% height), show full info about rehabilitant on eva page.

--- a/public/css/css.css
+++ b/public/css/css.css
@@ -22,7 +22,7 @@
         }
 
         
-@import url(https://fonts.googleapis.com/css?family=Poiret+One);
+
 
 
 *{
@@ -550,31 +550,35 @@ nav.active { left: 0; }
   float:left;
   width:180px;
   height: 100%;
-  padding-top:20px;
+  padding-top:10px;
+  background-color: #fbfbfb;
+    border-right:1px solid #aaa;
 
 }
 #groupName{
+  color: #363636
   font-size: 16px;
-  height:30px;
-  border-bottom:1px solid;
-  margin: 0 10 0 10;
+  height:50px;
+  border-bottom:1px solid #dedede;
+  margin: 0 5 0 5;
   text-align: center;
   font-weight:bold;
+  -webkit-box-shadow: 0 15px 30px -20px #ababab;
+   -moz-box-shadow: 0 15px 30px -20px #ababab;
+        box-shadow: 0 15px 30px -20px #ababab;
 }
 #rev_list { 
   position:relative;
   float:left;
   width:180px;
   padding-top:20px;
-  height: calc(100% - 30px);
-  background: #111;
+  height: calc(100% - 60px);
   float: left; 
-  background: #fff;
   color: #ddd; 
   text-align: center;
   overflow :scroll;
   position: static;
-  border-right:1px solid #aaa;
+
 }
 .drag_box {
   width:160px;
@@ -816,38 +820,10 @@ ul
 .domain{
   display: none;
 }
-
 .hoverInfo{
-  font-family: 'Poiret One', cursive;
-  width:calc(100% - 20px);
-  padding-top:30px;
-
-  color:#689595;
+  font-family: helvetica;
+  width:100%;
+  padding-top:20px;
   text-align: center;
-}
-.hoverInfo h2{
-    position: relative;
-  float:left;
-    font-size: 50px;
-}
-.hoverInfo p{
-  position: relative;
-  float:left;
-  padding-left:15px;
-  padding-top:20px;
-    font-size: 14px;
-      color:#689595;
-}
-.hoverInfo img{
-    position: relative;
-  float:left;
-  width:50px;
-  padding-top:20px;
-  margin-right:15px;
-}
-.hoverInfo .bpm{
-  width: 190px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  font-size: 30px
 }
